@@ -4,6 +4,8 @@ X-editable changelog
 
 Version 1.1.1 wip
 ----------------------------   
+[enh] object can be passed in 'option' method to set several options simultaneously (vitalets)  
+[enh #20] toggle editable by 'dblclick' and 'mouseenter' (vitalets)  
 [enh] added 'inputs-ext' directory with sample input 'address'. They will not be concatenated to main files (vitalets)  
 [enh #13] 'onblur' option: to cancel, submit or ignore when user clicks outside the form (vitalets)  
 [enh] 'ajaxOptions' parameter for advanced ajax configuration (vitalets)  
